--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "paper-elements": "PolymerElements/paper-elements#1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
-    "page": "visionmedia/page.js#~1.6.3"
+    "page": "visionmedia/page.js#~1.6.3",
+    "sortable-list": "robdodson/sortable-list#edca31e4aa7a35fcdddb614133d96d9d29494ed9"
   },
   "devDependencies": {}
 }
