Basic firebase syncing and sorting working

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "paper-elements": "PolymerElements/paper-elements#1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
-    "page": "visionmedia/page.js#~1.6.3"
+    "page": "visionmedia/page.js#~1.6.3",
+    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.1"
   },
   "devDependencies": {}
 }
