--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,13 @@
   "name": "polymer-starter-kit",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#master",
+    "polymer": "Polymer/polymer#^1.1.4",
     "iron-elements": "PolymerElements/iron-elements#^1.0.0",
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.0.1",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
     "page": "visionmedia/page.js#^1.6.3",
-    "firebase-element": "GoogleWebComponents/firebase-element#61-kschaaf-local-key"
+    "firebase-element": "GoogleWebComponents/firebase-element#fix-firebase-collection-regressions"
   },
   "devDependencies": {
     "web-component-tester": "*",
