--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "todo-list",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "polymer": "Polymer/polymer#^1.1.4",
